<resources>
    <string name="app_name">B07_project</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ui_store_page_label">Store Page</string>
    <string name="store_list_element_default_image_description">Default Store Image</string>
    <string name="store_list_element_default_description">Lorem ipsum dolor sit amet , consectetur adipiscing elit. Nam accumsan tempor faucibus. Duis sed neque velit.Lorem ipsum dolor sit amet.</string>
    <string name="store_default_name">Store Name</string>
    <string name="product_default_price">$10.00</string>
    <string name="product_default_name">Sample Product</string>
    <string name="product_default_image_description">Product Image</string>
    <string name="store_default_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut malesuada dui. Ut pellentesque elementum erat, at cursus mauris imperdiet eget. Nullam venenatis ac sapien eu iaculis.</string>
    <string name="ui_start_page_label">Start Page</string>
    <string name="ui_store_page_add_product_description">Add product button</string>
    <string name="store_edit_button_text">Edit Store Information</string>
    <string name="store_name_field_label">Store Name</string>
    <string name="store_desc_field_label">Store Description</string>
    <string name="store_name_field_hint">Store Name Field</string>
    <string name="store_desc_field_hint">Store Description Field</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register_for_seller">Register for Seller</string>
    <string name="register_for_customer">Register for Customer</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="registration_for_seller">Registration for Seller</string>
    <string name="seller">Seller</string>
    <string name="customer">Customer</string>
    <string name="who_are_you">Who are You?</string>
    <string name="a_za_z0_9_a_z_a_z">[a-zA-Z0-9._-]+\\.seller@([a-z]+\\.)+[a-z]+$</string>
    <string name="registration_for_customer">Registration for Customer</string>
    <string name="default_name">Item Name</string>
    <string name="default_description">Item Description</string>
    <string name="default_price">$0.00</string>
    <string name="default_quantity">0</string>
    <string name="details">Details</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="price">Price</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="logout">Logout</string>
    <string name="move_to_completed">Move to Completed</string>
</resources>