<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".pages.start_screen.MainActivity_question">
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/who_are_you" />

    <Button
        android:id="@+id/seller"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:text="@string/seller"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/customer"
        android:layout_width="158dp"
        android:layout_height="wrap_content"

        android:text="@string/customer" />
</LinearLayout>